[package]
name = "remove-exports"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
swc_common = "0.33.18"
swc_ecmascript = { version = "0.239.13", features = ["parser", "visit", "codegen", "transforms"] }
wasm-bindgen = "0.2.91"

[profile.release]
opt-level = "s"
